--- a/CSS/adaptive.css
+++ b/CSS/adaptive.css
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1210px) {
+    .slick-next {
+        right: 0;
+    }
+
+    .slick-prev {
+        left: 0;
+    }
+}
+
 @media screen and (max-width: 1170px) {
     #main {
         padding-right: 20px;
@@ -126,9 +136,18 @@
         text-align: center;
         margin-bottom: 30px;
     }
+
+    #more-contacts {
+        width: 585px !important;
+    }
+
+    #map iframe {
+        width: 585px !important;
+    }
 }
 
-@media screen and (max-width: 940px) {
+
+@media screen and (max-width: 960px) {
 
     #main-container-image img {
         width: 450px;
@@ -158,7 +177,7 @@
 
     .slick-list {
         width: 591px !important;
-        height: 335px;
+        height: 317px;
     }
 
     .slick-prev {
@@ -388,7 +407,7 @@
     }
 
     .product-item:nth-child(1n) {
-        margin-right: 0;
+        margin-right: 10px;
     }
 
     .title {
@@ -439,6 +458,10 @@
 
     #header-menu.menu-open {
         display: flex !important;
+    }
+
+    .more-info-title {
+        margin-top: 10px !important;
     }
 }
 
