--- a/CSS/adaptive.css
+++ b/CSS/adaptive.css
@@ -316,6 +316,21 @@
     #video {
         width: 450px !important;
     }
+
+    #map iframe {
+        width: 450px !important;
+    }
+
+    #more-contacts {
+        width: 450px !important;
+        height: 227px !important;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .more-info-title {
+        margin-top: 10px !important;
+    }
 }
 
 @media screen and (max-width: 620px) {
@@ -335,13 +350,6 @@
         width: 100% !important;
     }
 
-    #more-contacts {
-        width: 400px !important;
-        height: 227px !important;
-        flex-wrap: wrap;
-        align-items: center;
-    }
-
     #header {
         flex-direction: unset !important;
         align-items: end;
@@ -354,7 +362,7 @@
 
     #header-menu {
         position: fixed;
-        background: rgba(244, 222, 255, 0.65);
+        background: rgba(244, 222, 255, 0.91);
         width: 100% !important;
         height: 100%;
         justify-content: center !important;
@@ -455,13 +463,18 @@
         width: 400px !important;
     }
 
-
     #header-menu.menu-open {
         display: flex !important;
     }
+}
 
-    .more-info-title {
-        margin-top: 10px !important;
+@media screen and (max-width: 480px) {
+    #map iframe {
+        width: 100% !important;
+    }
+
+    #more-contacts {
+        width: 100%!important;
     }
 }
 
@@ -479,6 +492,9 @@
         width: 400px !important;
     }
 
+    .more-info-products-text {
+        font-size: 12px !important;
+    }
 }
 
 @media screen and (max-width: 410px) {
@@ -520,10 +536,6 @@
         width: 260px !important;
     }
 
-    .more-info-products-text {
-        font-size: 15px !important;
-    }
-
     #products-action a.btn {
         padding: 20px 30px !important;
     }
@@ -534,16 +546,13 @@
         width: 300px !important;
     }
 
-    #main-info-action a {
-        width: 200px;
-    }
 
     #teachers-text {
         font-size: 16px !important;
     }
 
     #products-action a.btn {
-        padding: 20px 10px !important;
+        padding: 20px 16px !important;
     }
 
     .place-text {
